[gd_scene load_steps=8 format=3 uid="uid://duo17cmdjk3if"]

[ext_resource type="Texture2D" uid="uid://d37170mtitesn" path="res://resources/sprites/icon.svg" id="1_qtbm1"]
[ext_resource type="Script" path="res://slot.gd" id="1_y5hud"]
[ext_resource type="PackedScene" uid="uid://0lgraw2k1f3m" path="res://scenes/draggable.tscn" id="3_ughgu"]
[ext_resource type="PackedScene" uid="uid://wej27gmwpqj3" path="res://scenes/SpriteFood.tscn" id="3_vammb"]
[ext_resource type="Script" path="res://food.gd" id="4_yl643"]
[ext_resource type="PackedScene" uid="uid://fl3u44bar6vm" path="res://scenes/dropable.tscn" id="5_cps38"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jf6bb"]
size = Vector2(113, 116)

[node name="Slot" type="Area2D"]
script = ExtResource("1_y5hud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_jf6bb")

[node name="SpriteSlot" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("1_qtbm1")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -57.0
offset_top = -60.0
offset_right = 58.0
offset_bottom = 58.0
mouse_filter = 2
color = Color(0.054902, 1, 1, 0.215686)

[node name="SpriteFood" parent="." node_paths=PackedStringArray("food") instance=ExtResource("3_vammb")]
food = NodePath("../Food")

[node name="Draggable" parent="." node_paths=PackedStringArray("food", "area_draggable") instance=ExtResource("3_ughgu")]
food = NodePath("../Food")
area_draggable = NodePath("..")

[node name="Food" type="Node" parent="."]
script = ExtResource("4_yl643")

[node name="Dropable" parent="." node_paths=PackedStringArray("food", "area_dropable") instance=ExtResource("5_cps38")]
food = NodePath("../Food")
area_dropable = NodePath("..")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered2"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="cancel" from="Draggable" to="SpriteFood" method="_on_draggable_cancel"]
[connection signal="finish" from="Draggable" to="." method="_on_draggable_finish"]
[connection signal="finish" from="Draggable" to="SpriteFood" method="_on_draggable_finish"]
[connection signal="start" from="Draggable" to="SpriteFood" method="_on_draggable_start"]
[connection signal="drag_item_entered" from="Dropable" to="." method="_on_dropable_drag_item_entered"]
[connection signal="drag_item_exited" from="Dropable" to="." method="_on_dropable_drag_item_exited"]
[connection signal="dropped" from="Dropable" to="." method="_on_dropable_dropped"]
